--- a/src/views/layout/components/myMap/index.scss
+++ b/src/views/layout/components/myMap/index.scss
@@ -9,6 +9,7 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow: hidden;
   #mapContainer {
     width: 100%;
     height: 100%;
