--- a/src/views/layout/components/workOrderDetails/index.scss
+++ b/src/views/layout/components/workOrderDetails/index.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  overflow: hidden;
   .details-tab {
     width: 100%;
     height: 100%;
@@ -37,14 +38,14 @@
         transition: all 1.3s;
         z-index: 1;
         width: 100%;
-        height: vh(17.5);
+        height: vh(37);
         display: flex;
         & > div {
-          font-size: vw(8);
-          height: vh(17);
+          font-size: vw(10);
+          height: vh(37);
           color: #c3cad9;
           text-align: center;
-          line-height: vh(17);
+          line-height: vh(37);
           border-bottom: 1px solid rgba(101, 124, 168, 0.3);
           border-right: 1px solid rgba(101, 124, 168, 0.3);
           &:last-of-type {
